--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "ramda": "^0.26.1",
     "vue": "2.6.10",
     "vue-draggable-resizable-gorkys": "^2.2.1",
     "vue-router": "3.0.6",
