--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
+    "colorssk": "concurrently \"npm run dev\" \"npm run server\"",
     "server": "nodemon server/server.js",
     "build:prod": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
@@ -18,6 +19,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.0.0",
     "element-ui": "2.7.2",
     "expose-loader": "^0.7.5",
     "express": "^4.17.1",
