--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "colorssk": "concurrently \"npm run dev\" \"npm run server\"",
+    "cc": "node build-concurrently.js",
     "server": "nodemon server/server.js",
     "build:prod": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
